Overflow Y fixes

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -59,7 +59,7 @@ body {
     position:relative;
     margin: 0 auto;
     width: 100%;
-    height: auto;
+    height: 100vh;
 
     /*Janky way of making a linear-grad border with a radius*/
     border: double 1px transparent;
@@ -89,7 +89,7 @@ body {
     font-family: "Poppins";
     font-weight: bold;
     color: #FFFFFF;
-    
+    z-index: 1;
     
 }
 
@@ -141,6 +141,7 @@ body {
     width: 100%;
     height: 15vh;
     border-bottom: var(--separating-line);
+    overflow-y: auto;
 }
 
 .side-panel-language{
@@ -196,7 +197,8 @@ body {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 0.3em;
     width: fit-content;
-    height: fit-content;
+    height: 100%;
+    overflow-y: auto;
 }
 
 .skills-text{
@@ -233,6 +235,7 @@ body {
     padding: 5px;
     width: 100%;
     border-bottom: var(--separating-line);
+    overflow-y: auto;
 }
 
 .side-panel-card{
@@ -245,7 +248,7 @@ body {
     padding: 1px;
     margin: 1px;
     color: rgb(255, 255, 255);
-
+    overflow-y: auto;
     border-radius: 0.7em;
     background-image: linear-gradient(var(--slot-background));
 }
